--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "jquery": "^3.7.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
+    "shallow-equal": "^3.1.0",
+    "shallowequal": "^1.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
