--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.3.6",
     "jquery": "^3.7.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-scripts": "^5.0.1",
+    "reactstrap": "^9.2.3",
     "shallow-equal": "^3.1.0",
     "shallowequal": "^1.1.0",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.21.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
